--- a/ios/Lounge/Info.plist
+++ b/ios/Lounge/Info.plist
@@ -39,6 +39,13 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/NanumSquareB.ttf</string>
+		<string>Fonts/NanumSquareEB.ttf</string>
+		<string>Fonts/NanumSquareL.ttf</string>
+		<string>Fonts/NanumSquareR.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
