feat(exhibit): 전시회 세부의 화면을 렌더링 할 수 있게 컴포넌트를 구성한다 - 서버에서 제공되는 정보를 가정해서 fixture를 만들었다. - 별점에 대한 컴포넌트를 직접 로직까지  구현했다. - Image.getSize()를 사용하면 url로 제공되는 이미지의 높이와 너비를 구할 수 있다. - Image.resolveAssetSource()를 사용하면 require로 불러오는 로컬 이미지의 높이와 너비를 구할 수 있다. - dimension.get('window')로 현재 기기의 width와 height을 구할 수 있다.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,10 @@ target 'Lounge' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+  pod 'react-native-view-shot', :path => '../node_modules/react-native-view-shot'
+
   target 'LoungeTests' do
     inherit! :complete
     # Pods for testing
